--- a/jQuery/first.html
+++ b/jQuery/first.html
@@ -26,7 +26,7 @@
     <button onclick="notdisp()">Hide</button>
     <button onclick="changeBKG()">Change BackgroundColor</button>
     <button onclick="rmvBKG()">Remove BackgroundColor</button>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
         function changeData(){
             // $("#demo").text("Hiii")
@@ -37,7 +37,9 @@
             $("#demo").show()
         }
         function notdisp(){
-            $("#demo").hide()
+            $("#demo").hide(3000,function(){
+                alert('html will hide')
+            })
         }
         function changeBKG(){
             $('.box').addClass('bgRed')
