--- a/jQuery/second.html
+++ b/jQuery/second.html
@@ -39,7 +39,7 @@
             $(".box").slideToggle(3000)
         }
         function fade1(){
-            $(".box").fadeIn(2000)
+            $(".box").fadeOut(2000).fadeIn(2000)
         }
         function fade2(){
             $(".box").fadeOut(2000)
