--- a/javascript/form_validation.html
+++ b/javascript/form_validation.html
@@ -43,24 +43,60 @@
             let mb = document.frm.mob.value
             let em = document.frm.email.value
             let pw = document.frm.pwd.value
+            let namePtn = /^[A-Za-z]+$/
             if (nm == "") {
                 document.getElementById('nameErr').innerHTML = "Plz enter name"
                 status = 1
             } else if (nm.length < 2 || nm.length > 10) {
                 document.getElementById('nameErr').innerHTML = "Name must be between 2 to 10 characters"
                 status = 1
+            } else if (!namePtn.test(nm)) {
+                document.getElementById('nameErr').innerHTML = "Only alphabetics are allowed"
+                status = 1
             }
+            let numPtn = /^[0-9]+$/
             if (mb == "") {
                 document.getElementById('mobErr').innerHTML = "Plz enter mobile"
                 status = 1
+            } else if (!numPtn.test(mb)) {
+                document.getElementById('mobErr').innerHTML = "Only digits are allowed"
+                status = 1
             }
+            var emailPtn = /^[A-Za-z0-9]+@[A-Za-z]+\.[a-zA-Z]{2,3}$/
             if (em == "") {
                 document.getElementById('emailErr').innerHTML = "Plz enter email"
                 status = 1
+            } else if (!emailPtn.test(em)) {
+                document.getElementById('emailErr').innerHTML = "Plz enter valid email"
+                status = 1
             }
+            ptn = /[0-9]/
+            ptn1 = /[A-Z]/
+            ptn2 = /[a-z]/
+            ptn3 = /[!@#$%^&*()\-+.]/
             if (pw == "") {
                 document.getElementById('pwdErr').innerHTML = "Plz enter password"
                 status = 1
+            } else if (pw.length < 6) {
+                document.getElementById('pwdErr').innerHTML = "Password must be 6 or more characters"
+                status = 1
+            } else {
+                if (!ptn.test(pw)) {
+                    document.getElementById('pwdErr').innerHTML = "<br>Password must contain 1 digit"
+                    status = 1
+                }
+                if (!ptn1.test(pw)) {
+                    document.getElementById('pwdErr').innerHTML += "<br>Password must contain 1 Capital"
+                    status = 1
+                }
+                if (!ptn2.test(pw)) {
+                    document.getElementById('pwdErr').innerHTML += "<br>Password must contain 1 Small "
+                    status = 1
+                }
+                if (!ptn3.test(pw)) {
+                    document.getElementById('pwdErr').innerHTML += "<br>Password must contain 1 special character"
+                    status = 1
+                }
             }
             if (status == 1) {
                 return false
